--- a/anfrage.html
+++ b/anfrage.html
@@ -179,6 +179,7 @@
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
                         <li><a href="impressum.html">Impressum</a></li>
+                        <li><a href="datenschutz.html">Datenschutz</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-5">
