--- a/impressum.html
+++ b/impressum.html
@@ -75,7 +75,7 @@
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
                     <h1 class="mb-4" data-aos="fade-up" data-aos-delay="100">Wie schön, dass Du hier bist!</h1>
-                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="#Datenschutz">Datenschutz</a></p>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="#Datenschutz">Impressum</a></p>
                 </div>
             </div>
         </div>
@@ -83,84 +83,29 @@
 
     <div class="container" id="Datenschutz">
         <div class="section-content">
-            <h1>https://www.juraforum.de/impressum-generator/</h1>
-            <h1 class="page-title">Datenschutzerklärung</h1>
-
-            <h3>1. Verantwortlicher für die Verarbeitung personenbezogener Daten</h3>
-
+            <h2>Impressum</h2>
             <p>
-                Lena Staudt / Kitzlesweg 15 / D - 97980 Markelsheim /
-                mail@domain.de. Weitere Kontaktdaten entnehmen Sie bitte dem Impressum.
+                Lena Staudt<br />
+                Lettering im Stall<br />An der Tauber 14<br />97990 Elpersheim
             </p>
-
-            
-
-            <h3>2. Erhebung und Verarbeitung personenbezogener Daten</h3>
-
             <p>
-                Über den in Punkt 1 bereits beschriebenen Umfang hinaus werden
-                personenbezogene Daten in nachfolgend beschriebener Weise erhoben.
+                Telefon: 01604054800<br />
+                E-Mail: <a href="mailto:letteringimstall@gmail.com">letteringimstall@gmail.com</a><br />
             </p>
-
-            <h3>2.1 Datenverarbeitung durch Formspree</h3>
-
-            Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen,
-            senden wir die von Ihnen angegebene E-Mail-Adresse und den Namen an <a href="https://formspree.io/">Formspree Inc.</a> - sobald sie das
-            Kontaktformular absenden. Diese Daten werden dort verarbeitet, gespeichert und
-            an uns per Mail weitergegeben. Außerdem werden von Formspree unter anderem
-            weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der
-            Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte
-            Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte
-            Übersicht der erhobenen Daten finden Sie hier
-            http://docs.formspree.io/files/terms.pdf. Rechtsgrundlage für die Nutzung von
-            Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem
-            vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden:
-            Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem
-            folgenden Dokument zusammengefasst: http://docs.formspree.io/files/terms.pdf.
-            <br>
-            Anstatt des Kontaktformulars können Sie uns natürlich auch direkt per
-            E-Mail kontaktieren: mail@punktgrau.de.
-            <p></p>
-
-            <h3>2.2 Verarbeitung von Daten mit Hilfe von Cookies</h3>
-
-            <p>Von unserer Webseite werden keine Cookies gespeichert oder gesetzt.</p>
-
-            <h3>2.3 Automatisierte Entscheidungsfindung und Profiling</h3>
-
-            <p>
-                Ihre Daten werden von unserer Seite nicht für eine automatisierte
-                Entscheidungsfindung oder für ein Profiling verwendet.
-            </p>
-
-            <h3>3. Rechtliche Grundlage für die Verarbeitung Ihrer Daten</h3>
-
-            <p>
-                Die Rechtmäßigkeit (Rechtsgrundlage) für die Verarbeitung Ihrer Daten
-                ergibt sich aus Ihrer Einwilligung (gem. Art. 6 Abs. 1 lit. a DS-GVO) bzw.
-                der Wahrung der berechtigten Interessen des Betreibers (gem. Art. 6 Abs. 1
-                lit. f DS-GVO).
-            </p>
-
-            <h3>4. Links zu anderen Websites</h3>
-
-            <p>
-                Unsere Internet-Präsenz enthält Links zu anderen Websites. Wir haben
-                keinen Einfluss darauf, dass die Betreiber anderer Websites die
-                Datenschutzbestimmungen einhalten.
-            </p> <p>
-                Wir sind als Anbieter für eigene
-                Inhalte nach den allgemeinen Gesetzen verantwortlich. Von diesen eigenen
-                Inhalten sind Links auf die von anderen Anbietern bereitgehaltenen Inhalte
-                zu unterscheiden. Für fremde Inhalte, die über Links zur Nutzung
-                bereitgestellt werden, übernehmen wir keine Verantwortung und machen uns
-                deren Inhalt nicht zu Eigen.
-            </p> <p>
-                Für illegale, fehlerhafte oder
-                unvollständige Inhalte und insbesondere für Schäden, die aus der Nutzung
-                oder Nichtnutzung solcherart dargebotener Informationen entstehen, haftet
-                allein der Anbieter der Seite, auf welche verwiesen wurde.
-            </p>
+            <br /><br /><h2>Disclaimer – rechtliche Hinweise</h2>
+            § 1 Warnhinweis zu Inhalten<br />
+            Die kostenlosen und frei zugänglichen Inhalte dieser Webseite wurden mit größtmöglicher Sorgfalt erstellt. Der Anbieter dieser Webseite übernimmt jedoch keine Gewähr für die Richtigkeit und Aktualität der bereitgestellten kostenlosen und frei zugänglichen journalistischen Ratgeber und Nachrichten. Namentlich gekennzeichnete Beiträge geben die Meinung des jeweiligen Autors und nicht immer die Meinung des Anbieters wieder. Allein durch den Aufruf der kostenlosen und frei zugänglichen Inhalte kommt keinerlei Vertragsverhältnis zwischen dem Nutzer und dem Anbieter zustande, insoweit fehlt es am Rechtsbindungswillen des Anbieters.<br />
+            <br />
+            § 2 Externe Links<br />
+            Diese Website enthält Verknüpfungen zu Websites Dritter ("externe Links"). Diese Websites unterliegen der Haftung der jeweiligen Betreiber. Der Anbieter hat bei der erstmaligen Verknüpfung der externen Links die fremden Inhalte daraufhin überprüft, ob etwaige Rechtsverstöße bestehen. Zu dem Zeitpunkt waren keine Rechtsverstöße ersichtlich. Der Anbieter hat keinerlei Einfluss auf die aktuelle und zukünftige Gestaltung und auf die Inhalte der verknüpften Seiten. Das Setzen von externen Links bedeutet nicht, dass sich der Anbieter die hinter dem Verweis oder Link liegenden Inhalte zu Eigen macht. Eine ständige Kontrolle der externen Links ist für den Anbieter ohne konkrete Hinweise auf Rechtsverstöße nicht zumutbar. Bei Kenntnis von Rechtsverstößen werden jedoch derartige externe Links unverzüglich gelöscht.<br />
+            <br />
+            § 3 Urheber- und Leistungsschutzrechte<br />
+            Die auf dieser Website veröffentlichten Inhalte unterliegen dem deutschen Urheber- und Leistungsschutzrecht. Jede vom deutschen Urheber- und Leistungsschutzrecht nicht zugelassene Verwertung bedarf der vorherigen schriftlichen Zustimmung des Anbieters oder jeweiligen Rechteinhabers. Dies gilt insbesondere für Vervielfältigung, Bearbeitung, Übersetzung, Einspeicherung, Verarbeitung bzw. Wiedergabe von Inhalten in Datenbanken oder anderen elektronischen Medien und Systemen. Inhalte und Rechte Dritter sind dabei als solche gekennzeichnet. Die unerlaubte Vervielfältigung oder Weitergabe einzelner Inhalte oder kompletter Seiten ist nicht gestattet und strafbar. Lediglich die Herstellung von Kopien und Downloads für den persönlichen, privaten und nicht kommerziellen Gebrauch ist erlaubt.<br />
+            <br />
+            Die Darstellung dieser Website in fremden Frames ist nur mit schriftlicher Erlaubnis zulässig.<br />
+            <br />
+            § 4 Besondere Nutzungsbedingungen<br />
+            Soweit besondere Bedingungen für einzelne Nutzungen dieser Website von den vorgenannten Paragraphen abweichen, wird an entsprechender Stelle ausdrücklich darauf hingewiesen. In diesem Falle gelten im jeweiligen Einzelfall die besonderen Nutzungsbedingungen.<p>Quelle: <a href="https://www.juraforum.de/impressum-generator/">Impressum Generator von JuraForum.de</a></p>
 
 
         </div>
@@ -186,6 +131,7 @@
                             <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                             <li><a href="derstall.html">Der Stall</a></li>
                             <li><a href="impressum.html">Impressum</a></li>
+                            <li><a href="datenschutz.html">Datenschutz</a></li>
                         </ul>
 
 
